Commit de teste para GH

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
        <small><a href="#inicio">(Voltar)</a></small>
        <p>Existem diversas linguagens de programação hoje em dia, mas podemos listar aqui as 5 primeiras, segdundo o RedMonk:</p>
        <p><ol>
-            <li>Javascript</li>
+            <li>JavaScript</li>
             <li>Python</li>
             <li>Java</li>
             <li>PHP</li>
